# rinha25

./: .dockerignore  Dockerfile  README.md  api.py  main.py  pyproject.toml
.github/workflows/: docker-build.yml
src/: connection_manager.py  main.py
