[project]
name = "rinha25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.25.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "ipython>=9.4.0",
    "orjson>=3.11.1",
    "py-spy>=0.4.1",
    "redis[hiredis]>=6.2.0",
    "ruff>=0.12.3",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = []
